components/vault/envs/prod/vaultwarden/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
spec:
  template:
    spec:
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.37.4 # {"$imagepolicy": "flux-system:vaultwarden"}
