components/vault/envs/prod/vaultwarden/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx-external
  rules:
    - host: vaultwarden.${EXTERNAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: vaultwarden
                port:
                  name: http
  tls:
    - hosts:
        - vaultwarden.${EXTERNAL_DOMAIN}
      secretName: vaultwarden-cert
